--- a/package.json
+++ b/package.json
@@ -7,18 +7,25 @@
     "test": "test"
   },
   "engines": {
-    "node": "^9.2.0",
-    "npm": "^5.5.1"
+    "node": "8.9.3",
+    "npm": "5.5.1"
   },
   "scripts": {
     "test": "mocha test",
     "start": "node ./server/app.js",
     "server-dev": "nodemon ./server/app.js",
+    "server-inspect": "nodemon --inspect ./server/app.js",
     "build": "webpack -p",
     "webpack": "webpack -w",
-    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress"
+    "postinstall": "webpack -d",
   },
   "dependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.2.2",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.18.2",
     "debug": "^2.2.0",
     "dotenv": "^5.0.0",
@@ -26,7 +33,8 @@
     "express": "~4.13.1",
     "morgan": "^1.7.0",
     "muicss": "^0.9.36",
-    "node-cron": "^1.2.1"
+    "node-cron": "^1.2.1",
+    "webpack": "^3.10.0"
   },
   "devDependencies": {
     "assert": "^1.4.1",
