--- a/package.json
+++ b/package.json
@@ -34,17 +34,12 @@
     "morgan": "^1.7.0",
     "muicss": "^0.9.36",
     "node-cron": "^1.2.1",
+    "pg": "^7.4.1",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
     "assert": "^1.4.1",
     "axios": "^0.16.2",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-3": "^6.24.1",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "concurrently": "^2.0.0",
@@ -55,8 +50,7 @@
     "react-redux": "5.0.6",
     "redux": "3.6.0",
     "redux-logger": "3.0.6",
-    "redux-thunk": "2.2.0",
-    "webpack": "2.4.1"
+    "redux-thunk": "2.2.0"
   },
   "repository": {
     "type": "git",
