--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "test": "mocha test",
+    "test-react": "jest",
     "start": "node app/server/app.js",
     "server-dev": "nodemon app/server/app.js",
     "server-inspect": "nodemon --inspect app/server/app.js",
@@ -21,16 +22,22 @@
   },
   "dependencies": {
     "babel-core": "^6.24.0",
+    "babel-jest": "^6.0.1",
     "babel-loader": "^6.4.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-airbnb": "^1.0.1",
     "babel-preset-env": "^1.2.2",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-3": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "body-parser": "^1.18.2",
     "debug": "^2.2.0",
     "dotenv": "^5.0.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "lodash": "^4.17.5",
     "morgan": "^1.7.0",
     "muicss": "^0.9.36",
     "node-cron": "^1.2.1",
@@ -43,9 +50,14 @@
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "concurrently": "^2.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "15.1.1",
+    "jest-cli": "15.1.1",
     "lodash.debounce": "^4.0.3",
     "prop-types": "15.5.8",
     "react": "16.0.0",
+    "react-addons-test-utils": "^0.14.7",
     "react-dom": "16.0.0",
     "react-redux": "5.0.6",
     "redux": "3.6.0",
